--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="container">
       <div id="side">
         <div id="logo">
+          <img src="assets/logo.png" />
         </div>
         <div id="leader">
           A social calendar for #dctech.<br/>Emphasis on social.
